# python-x256-numpy

./: .gitignore  README.md  README.rst  demo.py  pyproject.toml  test.py  test.sh
src/x256numpy/: __init__.py  x256.npz  x256.py
